--- a/config/permissions.ini
+++ b/config/permissions.ini
@@ -80,7 +80,7 @@ InstaSkip = no
 ; This group has full permissions.
 [MusicMaster]
 CommandBlacklist = restart shutdown
-GrantToRoles = 195063835999076354 196740524697321483 179720119801348096 184318790849396736 180322392357208064 172204060945022979 184477087602573313 178607661787381760
+GrantToRoles = 179720119801348096
 ; (ihy, tyt, dandy, slayers/council, kys/botcommander, smokeys, diep pike, tomb chat)
 UserList = 136621312645791744 87033492663197696
 ; angel, matthew
