--- a/config/permissions.ini
+++ b/config/permissions.ini
@@ -66,12 +66,12 @@
 
 ; This is the fallback group for any users that don't get assigned to another group.  Don't remove/rename this group.
 [Default]
-CommandWhitelist = summon disconnect play search skip queue pause resume id help np
+CommandWhitelist = summon disconnect play search skip queue pause resume id help np shuffle
 ; CommandBlacklist =
 IgnoreNonVoice = play skip search
 ; GrantToRoles =
 ; UserList =
-MaxSongLength = 2400
+MaxSongLength = 3000
 MaxSongs = 0
 AllowPlaylists = yes
 ; MaxPlaylistLength = 20
@@ -80,11 +80,11 @@ InstaSkip = no
 ; This group has full permissions.
 [MusicMaster]
 CommandBlacklist = restart shutdown
-GrantToRoles = 195063835999076354 196740524697321483 179720119801348096 184318790849396736 180322392357208064 172204060945022979 184477087602573313 178607661787381760
-; (ihy, tyt, dandy, slayers/council, kys/botcommander, smokeys, diep pike, tomb chat)
-UserList = 136621312645791744 87033492663197696
+GrantToRoles = 178607661787381760
+; (ihy,
+UserList = 136621312645791744
 ; angel, matthew
-MaxSongLength = 3600
+MaxSongLength = 0
 MaxSongs = 0
 MaxPlaylistLength = 0
 AllowPlaylists = yes
