--- a/config/options.ini
+++ b/config/options.ini
@@ -92,4 +92,4 @@ DeleteInvoking = yes
 
 ; Prints extra output in the console and some errors to chat.
 ; This option is a work in progress, don't expect much.  You might as well just leave it on for now.
-DebugMode = yes
+DebugMode = no
