--- a/config/permissions.ini
+++ b/config/permissions.ini
@@ -79,7 +79,7 @@ InstaSkip = no
 
 ; This group has full permissions.
 [MusicMaster]
-CommandBlacklist = restart shutdown
+CommandBlacklist = shutdown
 GrantToRoles = 178607661787381760
 ; (ihy,
 UserList = 136621312645791744
