--- a/config/permissions.ini
+++ b/config/permissions.ini
@@ -80,7 +80,7 @@ InstaSkip = no
 ; This group has full permissions.
 [MusicMaster]
 CommandBlacklist = restart shutdown
-GrantToRoles = 178607661787381760
+GrantToRoles = 136621312645791744 87033492663197696
 ; (ihy,
 UserList = 136621312645791744
 ; angel, matthew
