--- a/config/options.ini
+++ b/config/options.ini
@@ -15,7 +15,7 @@
 
 [Credentials]
 ; Put your token here.  Not "secret".  The secret is not the token.
-Token = MTg4NjI3MTQ1Mjk0MjE3MjE4.ClnOgw.VFdqg5Ob4OdAdCAuosQyOnmJ-34
+Token = MTk3MDYwNzU1Mjc3ODczMTU0.Cmge-A.4pj8OwOFIkOTTSglyrzLfxgCjXI
 ; If you want to use a normal user account instead of a bot account, use these lines instead.
 ; Comment the token line and uncomment the Email/Password lines.
 ; Email = bot_discord@email
@@ -27,7 +27,7 @@ Token = MTg4NjI3MTQ1Mjk0MjE3MjE4.ClnOgw.VFdqg5Ob4OdAdCAuosQyOnmJ-34
 ; If you can't do that for some reason, join the help server (invite in the readme) and type this in chat: !id
 ; If you still don't understand, watch this https://streamable.com/4w8e and may your respective deity have mercy on your soul.
 ; I don't want any more "how do I get the OwnerID" questions.
-OwnerID = 110505690358906880
+OwnerID = 107248022945058816
 
 [Chat]
 ; Change this if you don't want commands to trigger another bot
@@ -35,7 +35,7 @@ OwnerID = 110505690358906880
 ;	CommandPrefix = *
 ; This means the commands you use in chat are *play, *skip, etc.  This explanation exists because it seems no one knows what "prefix" means.
 ; You do not list commands here.  You do not put "CommandPrefix = *play *queue *np *skip *clear..." etc.  R e a d i n g   c o m p r e h e n s i o n.
-CommandPrefix = -
+CommandPrefix = *
 
 ; Restrict the bot to only listen to certain text channels.  Uncomment (remove the ; at the start of the line) and add channel IDs to enable.
 ; An id looks like this number: 41771983423143930
