--- a/config/permissions.ini
+++ b/config/permissions.ini
@@ -68,10 +68,10 @@
 [Default]
 CommandWhitelist = summon disconnect play search skip queue pause resume id help np shuffle
 ; CommandBlacklist =
-IgnoreNonVoice = play skip search
+IgnoreNonVoice = play pause skip search
 ; GrantToRoles =
 ; UserList =
-MaxSongLength = 3000
+MaxSongLength = 2400
 MaxSongs = 0
 AllowPlaylists = yes
 ; MaxPlaylistLength = 20
@@ -80,7 +80,7 @@ InstaSkip = no
 ; This group has full permissions.
 [MusicMaster]
 CommandBlacklist = restart shutdown
-GrantToRoles = 136621312645791744 87033492663197696
+GrantToRoles = 172204060945022979
 ; (ihy,
 UserList = 136621312645791744
 ; angel, matthew
