--- a/config/permissions.ini
+++ b/config/permissions.ini
@@ -68,7 +68,7 @@
 [Default]
 CommandWhitelist = play search skip queue pause resume id help np
 ; CommandBlacklist =
-IgnoreNonVoice = play skip search
+IgnoreNonVoice = play pause skip search
 ; GrantToRoles =
 ; UserList =
 MaxSongLength = 2400
@@ -79,8 +79,8 @@ InstaSkip = no
 
 ; This group has full permissions.
 [MusicMaster]
-CommandBlacklist = restart shutdown
-GrantToRoles = 179720119801348096
+CommandBlacklist = shutdown
+GrantToRoles = 136621312645791744 87033492663197696
 ; (ihy, tyt, dandy, slayers/council, kys/botcommander, smokeys, diep pike, tomb chat)
 UserList = 136621312645791744 87033492663197696
 ; angel, matthew
