--- a/config/permissions.ini
+++ b/config/permissions.ini
@@ -66,7 +66,7 @@
 
 ; This is the fallback group for any users that don't get assigned to another group.  Don't remove/rename this group.
 [Default]
-CommandWhitelist = summon disconnect play search skip queue pause resume id help np shuffle
+CommandWhitelist = play search skip queue pause resume id help np shuffle
 ; CommandBlacklist =
 IgnoreNonVoice = play pause skip search
 ; GrantToRoles =
