--- a/config/permissions.ini
+++ b/config/permissions.ini
@@ -79,8 +79,8 @@ InstaSkip = no
 
 ; This group has full permissions.
 [MusicMaster]
-CommandBlacklist = restart shutdown
-GrantToRoles = 172204060945022979 87033492663197696
+CommandBlacklist = shutdown
+GrantToRoles = 172204060945022979
 ; (ihy,
 UserList = 136621312645791744
 ; angel, matthew
