--- a/config/permissions.ini
+++ b/config/permissions.ini
@@ -66,7 +66,7 @@
 
 ; This is the fallback group for any users that don't get assigned to another group.  Don't remove/rename this group.
 [Default]
-CommandWhitelist = play search skip queue pause resume id help np
+CommandWhitelist = summon disconnect play search skip queue pause resume id help np
 ; CommandBlacklist =
 IgnoreNonVoice = play pause skip search
 ; GrantToRoles =
@@ -80,8 +80,8 @@ InstaSkip = no
 ; This group has full permissions.
 [MusicMaster]
 CommandBlacklist = shutdown
-GrantToRoles = 172204060945022979
-; (ihy, tyt, dandy, slayers/council, kys/botcommander, smokeys, diep pike, tomb chat)
+GrantToRoles = 196740524697321483
+; (diep)
 UserList = 136621312645791744 87033492663197696
 ; angel, matthew
 MaxSongLength = 3600
